# Gaffers-Clipboard

./: .gitignore  CLAUDE.md  LICENSE  README.md  fix_data_types.py  migrate_data_keys.py  pyproject.toml  requirements.txt
.github/agents/: Gaffer.agent.md.bak  Kitman.agent.md  Tactician.agent.md
config/: coordinates.json  league_competitions.json  performance_means_stds.json  performance_weights.json
docs/: 01a - The Outfield Telemetry Matrix.md  02b - Bayesian Smoothing Architecture.md  03a - Expected Threat Synthesis.md  04b - PCA Algorithm and Generating Weights.md  05a - Synthesis Pipeline & Contextual Logic.md  05b - Logistic Mapping Mathematics.md  06a - The Match Supremacy Scalar.md  06b - Multi-Position Alpha Drag.md  06c - Goalkeeper Heuristics.md  Appendix A - Positional Heuristics.md  Gaffer's Clipboard - Match Ratings Methodology.md  Gaffers_Clipboard_Algorithm_Critical_Review.md  How Gaffer's Clipboard Rates Players.md  Project Roadmap.md  Quantitative Design of the Gaffer's Clipboard Rating Algorithm.md  Quantitative Design of the Gaffers Clipboard Rating Algorithm.md  example_matches.json  project_roadmap.md  project_structure.md
docs/.obsidian/: app.json  workspace.json
model/: create_training_data.py  knn_ocr_model.yml  train_knn_model.py
scripts/: add_half_length_to_matches.py  backfill_match_ratings.py  migrate_club_team_names.py  migrate_competition_acronyms.py  migrate_historical_stats.py  migrate_matches_team_names.py  migrate_matches_xg_key.py  ocr_workbench.py  probe_load_json_types.py  rate_latest_match.py  summarize_report_types.py  sync_readme_metadata.py
src/: __main__.py  analytics_engine.py  app.py  custom_types.py  data_manager.py  exceptions.py  gui.py  logging_config.py  ocr.py  preprocessing.py  schemas.py  theme.py  types.py  utils.py
src/contracts/: __init__.py  backend.py  coordinates.py  ocr.py  ui.py
src/services/analytics/: __init__.py  match_ratings_service.py
src/services/app/: __init__.py  buffer_service.py  career_service.py  match_service.py  ocr_service.py  player_service.py  screenshot_service.py
src/services/data/: __init__.py  career_service.py  json_service.py  match_service.py  player_service.py
src/themes/: dark.json
src/views/: add_financial_frame.py  add_gk_frame.py  add_injury_frame.py  add_match_frame.py  add_outfield_frame.py  add_outfield_frame_1.py  add_outfield_frame_2.py  base_view_frame.py  career_config_frame.py  career_select_frame.py  create_career_frame.py  gk_stats_frame.py  left_player_frame.py  main_menu_frame.py  match_added_frame.py  match_review_frame.py  match_stats_frame.py  mixins.py  player_library_frame.py  player_stats_frame.py  sell_player_frame.py
src/views/widgets/: custom_alert.py  delay_overlay.py  scrollable_dropdown.py  scrollable_sidebar.py
testing/: coordinates_fix.py  coordinates_test.py  full_ocr_test.py  ocr_workbench.py
testing/fullscreen_screenshots/: match_overview_3.png.REMOVED.git-id  match_overview_4.png.REMOVED.git-id  match_overview_6.png.REMOVED.git-id  match_overview_7.png.REMOVED.git-id  match_overview_fs.png.REMOVED.git-id  player_attributes_1_1.png.REMOVED.git-id  player_attributes_1_2.png.REMOVED.git-id  player_attributes_2_1.png.REMOVED.git-id  player_attributes_2_2.png.REMOVED.git-id  player_attributes_3_1.png.REMOVED.git-id  player_attributes_3_2.png.REMOVED.git-id  player_attributes_gk.png.REMOVED.git-id  player_performance.png.REMOVED.git-id  player_performance_10.png.REMOVED.git-id  player_performance_12.png.REMOVED.git-id  player_performance_13.png.REMOVED.git-id  player_performance_14.png.REMOVED.git-id  player_performance_15.png.REMOVED.git-id  player_performance_16.png.REMOVED.git-id  player_performance_2.png.REMOVED.git-id  player_performance_3.png.REMOVED.git-id  player_performance_4.png.REMOVED.git-id  player_performance_5.png.REMOVED.git-id  player_performance_6.png.REMOVED.git-id  player_performance_7.png.REMOVED.git-id  player_performance_8.png.REMOVED.git-id  player_performance_9.png.REMOVED.git-id
testing/testing_data/data/: careers_details.json
testing/testing_data/data/Valencia_CF/: matches.json  metadata.json  (+1 more)
tests/: conftest.py  test_analytics_engine.py  test_app_career_service.py  test_app_match_service.py  test_app_player_service.py  test_buffer_service.py  test_competition_name_normalization.py  test_contract_name_uniqueness.py  test_coordinates.py  test_data_career_service.py  test_data_json_service.py  test_data_manager.py  test_data_match_service.py  test_data_player_service.py  test_integration_flow.py  test_ocr_full.py  test_schemas.py  test_utils.py
workshop/: cb_means_stds.json  cb_ratings_calculations.ipynb  cb_weights.json  cb_weights_calculations.ipynb  cdm_ratings_calculations.ipynb  cdm_weights_calculations.ipynb  cm_means_stds.json  cm_ratings_calculations.ipynb  cm_weights.json  cm_weights_calculations.ipynb  fullback_ratings_calculations.ipynb  fullback_weights_calculations.ipynb  gk_ratings_calculations.ipynb  position_means_stds.json  position_weights.json  ratings_calculations.ipynb  ratings_testing.ipynb  st_means_stds.json  st_ratings_calculation.ipynb  st_weights.json  st_weights_calculations.ipynb  unknown_pos_ratings_calculations.ipynb  unknown_pos_weights_calculations.ipynb  weights_calculations.ipynb  winger_ratings_calculations.ipynb  winger_weights_calculations.ipynb
workshop/ratings/: cb_ratings_calculations.ipynb  st_weights_calculations.ipynb
workshop/ratings_creation/: cb_weights_calculations.ipynb  cdm_weights_calculations.ipynb  cm_weights_calculations.ipynb  fullback_weights_calculations.ipynb  pos_shares.json  position_means_stds.json  position_weights.json  st_weights_calculations.ipynb  unknown_pos_weights_calculations.ipynb  winger_ratings_calculations.ipynb  winger_weights_calculations.ipynb
workshop/ratings_validation/: rating_attribution.ipynb  rating_ceiling_comparability.ipynb  rating_output_diagnostics.ipynb  rating_predictive_validity.ipynb  rating_reliability.ipynb  rating_scale_comparability.ipynb  rating_sensitivity.ipynb  ratings_overview.ipynb  ratings_v_gd.ipynb
(+8 files in other folders)
