[project]
name = "gaffers-clipboard"
version = "0.6.9"
description = "Automate your EA FC Career Mode data entry with custom OCR and machine learning analytics"
authors = [
    {name = "Kazik Sobotnicki", email = "kaziksobo@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
]

[project.urls]
Repository = "https://github.com/Kaziksobo/Gaffers-Clipboard"

[project.scripts]
gaffer = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]